compiler/tools/fpp-check/test/enum_missing_constant.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/enum_missing_constant.fpp: 1.1
enum E { }
^
error: enum must define at least one constant
